Kubernetes/Frontend/01_dep.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend-dep
  labels:
    app: web-potfolio
    tier: frontend
spec:
  replicas: 2  
  selector: 
    matchLabels:
      app: web-portfolio
      tier: frontend
  template: 
    metadata:
      name: frontend-pod
      labels:
        app: web-portfolio
        tier: frontend
    spec:
      containers:
        - name: frontend-container
          image: sjplautz/web-portfolio:frontend_app_image
          ports:
            - name: http
              containerPort: 80
          imagePullPolicy: Always
