Kubernetes/Frontend/01_frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: front-end-deployment
  labels:
    app: web-portfolio
    tier: front-end
spec:
  replicas: 2  
  selector: 
    matchLabels:
      app: web-portfolio
      tier: front-end
  template: 
    metadata:
      name: front-end-pod
      labels:
        app: web-portfolio
        tier: front-end
    spec:
      containers:
        - name: angular-container
          image: sjplautz/web-portfolio:frontend_app_image
          ports:
            - name: http
              containerPort: 80
          imagePullPolicy: Always
      nodeSelector:
        web-server: "true"
