Kubernetes/Frontend/02_frontend_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: angular-service
  labels:
    app: web-portfolio
    tier: front-end
spec:
  selector:
    app: web-portfolio
    tier: front-end
  ports:
    - name: http
      protocol: TCP
      port:  80
      targetPort: 80
