Kubernetes/Frontend/02_svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-svc
  labels:
    app: web-portfolio
    tier: frontend
spec:
  selector:
    app: web-portfolio
    tier: frontend
  ports:
    - name: http
      protocol: TCP
      port:  80
      targetPort: 80
