Kubernetes/Frontend/03_route.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-route
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 80
